# HaasoscopeProGUI

./: README.md  pyproject.toml
src/hspro/gui/: app.py  board_selector_dialog.py  buttons.py  main.py  main_window.py  model.py  read_out_options_dialog.py  scene.py  settings_dialog.py  toolbar.py  waveform_ext.py  zoom_dialog.py
src/hspro/gui/gui_ext/: arrows.py  container.py  fn.py  spin_boxes.py
src/hspro/gui/menus/: file_menu.py  help_menu.py  menu_bar.py  scene_menu.py  trace_menu.py  view_menu.py
src/hspro/gui/panels/: channels_panel.py  general_opts_panel.py  info_panel.py  plots_panel.py  trigger_panel.py
